--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,8 @@
                text-align: center;
                font-size: 35px;
                margin-bottom: 40px;
+               margin-left: auto;
+               margin-right: auto;
            }
            .textointro {
                margin: 35px;
