--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@ section {
     margin-top: 70px;
     text-align: center;
     font-size: 35px;
-    margin-bottom: 40px; }
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto; }
   section .textointro {
     margin: 35px;
     font-size: 23px;
